resources/scss/heista_design.scss
@charset "UTF-8";


//--------------navigation
.top-bar {
    background-color: #fff;
}

#top-bar {
    #left-bar{
        margin-top: 5px;
        padding: 14px 0px 5px 0px;
        ul{
            li{
                &:first{
                    margin-left: -25px;
                }
                
                display: block;
                float: left;
                margin-left: 44px;

                p{
                    font-size: .92857rem;
                    line-height: 1.07143rem;
                    font-weight: 700;
                }
            }
        }
    }

    #right-bar {
        ul {
            li {


                list-style-type: none;
                display: block;
                float: left;
                padding: 10px;

                a {
                    &:hover{
                        i{
                            span{
                                color: #fff;
                            }
                        }
                    }

                    i {
                        span {
                            color: #000;
                        }
                    }
                    
                }

                .anicon-search-item{
                  &:before{
                      background: #000;
                  } 
                  &:after{
                      background: #fff;
                      border: 1px solid #000;
                  }
                }
            }


        }
    }
}

.navbar {
    background: url(https://www.zeitlounge.com/layout/zeitlounge2016/body-bgd.jpg);
    height: 93px;

    .overlay {
        position: relative;
        width: 100%;
        height: 100%;
        background-color: #000000b5;
    }

    #mainNavbarCollapsable .mainmenu {
        margin-top: 14px;

        li {

            a{  
                color: #fff;
                &:hover{
                    color: #000000;
                }
            }
            

            span {
                color: #fff;
            }

            ul{
                li{
                    padding: 10px
                }
               
            }
        }
    }
}

//--------------END navigation


//--------------pade body 
body #page-body,
.page-content {
    background-color: #fff;
}

body {
    p {
        color: #000;
        line-height: 1.8;

        a {
            color: #000;
            border-bottom: 1px dotted #808080;
            text-decoration: none;

            &:hover {
                border-bottom: 1px solid #c00;
                cursor: pointer;
            }
        }
    }
}
//--------------pade body 

//--------------homepage
    .box-row {
        margin-top: 24px;

        &:first {
            margin-top: 48px;
        }

        &:last {
            margin-bottom: 50px;
        }

        .box .box-home {
            background-color: #fff;

            a {
                width: 100%;
                height: 100%;
                padding: 0;

                img {
                    width: 100%;
                    height: 100%;
                }
            }

            .box-footer {
                border: 1px solid #000;
                text-align: center;
                background-color: #fff;

                img {
                    vertical-align: middle;
                    margin-left: auto;
                    margin-right: auto;
                }
            }
        }
    }
//--------------end homepage



//----------------single item
.single {
    background-color: #fff;

    hr {
        border-top: 3px double #999;
    }

    .single-description {
        line-height: 1;

        #articleDesc {
            color: #000;
            font-size: 13px;

            p {
                line-height: 1;

                strong {
                    color: #666;
                    display: block;
                    font-size: 10px;
                    font-weight: 600;
                    margin-bottom: 5px;
                    margin-top: 16px;
                    text-transform: uppercase;
                    display: block;
                }
            }
        }
    }

    .technical-details {
        h2 {
            color: #c00;
            font-weight: 300;
            text-align: center;
        }

        #item_description {
            text-align: center;

            .features {
                list-style-type: none;
                max-width: none;
                display: inline-block;
                margin: 0 30px;
                text-align: left;
                vertical-align: top;
                -webkit-columns: 2;
                columns: 2;

                li {
                    color: #c00;
                    font-weight: 600;
                    margin-bottom: 40px;

                    &::before {
                        content: "\f013";
                        font-family: FontAwesome;
                        margin-right: 1ex;
                    }

                    dl {
                        margin-top: 1em;

                        dt {
                            color: #666;
                            font-size: 10px;
                            margin-bottom: 5px;
                            text-transform: uppercase;
                        }

                        dd {
                            border-bottom: 1px solid #e6e6e6;
                            color: #000;
                            font-size: 13px;
                            margin-bottom: 1em;
                            padding-bottom: 1em;
                        }
                    }
                }
            }
        }
    }

    .articlenumber{
        b{
            color: #000;
        }

        span{
            color: #000;
        }
    }

    .articleid{
        b{
            color: #000;
        }

        span{
            color: #000;
        }
    }
}

//----------------end single item



//------------------footer
.footer {
    background-color: #282828;

    .row {
        background-color: #282828;
        color: fff;

        .container-max #footer-benefits {
            padding-bottom: 50px;
            padding-top: 40px;
            margin-left: auto;
            margin-right: auto;
            position: relative;

            #footer-main-benefits {
                list-style: none;
                margin: 0;
                padding: 0;
                text-align: center;

                li {
                    display: block;
                    float: left;
                    margin-left: 39px;

                    &::before {
                        background: url(https://www.zeitlounge.com/layout/zeitlounge2016/tick-large.png);
                        content: '';
                        display: inline-block;
                        height: 27px;
                        position: relative;
                        top: 2px;
                        width: 24px;
                    }

                    a {
                        text-decoration: none;
                        color: #fff;
                        font-size: 26px;
                    }
                }
            }

            #footer-other-benefits {
                background-color: #3a3a3a;
                margin-top: 60px;
                padding: 35px 50px;

                #footer-other-benefits-long {
                    list-style-type: none;
                    float: right;

                    li {
                        margin: 20px 0;

                        &:before {
                            color: #cc0000;
                            content: "•";
                            margin-right: 5px;
                            position: relative;
                            top: 2px;
                        }

                        a {
                            text-decoration: none;
                            color: #fff;
                            font-size: 16px;
                        }
                    }
                }

                #footer-other-benefits-short {
                    list-style-type: none;
                    margin: 0;
                    padding: 0;

                    li {
                        margin: 20px 0;

                        &:before {
                            color: #cc0000;
                            content: "•";
                            margin-right: 5px;
                            position: relative;
                            top: 2px;
                        }

                        a {
                            text-decoration: none;
                            color: #fff;
                            font-size: 16px;
                        }
                    }
                }
            }
        }
    }

    .footer-content {
        margin-top: 50px;

        h3 {
            color: #fff;
            margin-bottom: 35px;
        }

        a,
        p {
            color: #fff;
        }

        .row {
            .footer-contact-container b {
                color: #fff;
            }

            .footer-info-container {
                ul {
                    list-style-type: none;
                    margin: 0;
                    padding: 0;

                    li a {
                        border-bottom: 1px dotted #808080;
                        text-decoration: none;
                    }


                }

                a {
                    color: #fff;
                }
            }


            .payment-info-container .payment-text ul {
                list-style-type: none;
                margin: 0;
                padding: 0;

                li {
                    text-decoration: none;
                    color: #fff;
                }
            }
        }

        #footer-payment-logos {
            margin-top: 50px;

            li {
                display: inline-block;
                margin-left: 20px;
                margin-right: 20px;
            }
        }
    }
}

//------------------end footer

